--- a/writedown/zm/paper.water/si.tex
+++ b/writedown/zm/paper.water/si.tex
@@ -39,8 +39,18 @@
 Thermodynamic, Dielectric, and Dynamical Properties of a Water System}
 \author{Han Wang}
 \email{han.wang@fu-berlin.de}
+\affiliation{CAEP Software Center for High Performance Numerical Simulation, Huayuan Road
+6, 100088 Beijing, China}
+\affiliation{Zuse Institute Berlin (ZIB), Germany}
 \author{Ikuo Fukuda}
 \email{ifukuda@protein.osaka-u.ac.jp}
+\affiliation{Institute for Protein Research, Osaka University, 3-2 Yamadaoka, Suita,
+Osaka 565-0871, Japan}
+\affiliation{RIKEN (The Institute of Physical and Chemical Research), 2-1 Hirosawa, Wako,
+Saitama 351-0198, Japan}
+\author{Haruki Nakamura}
+\affiliation{Institute for Protein Research, Osaka University, 3-2 Yamadaoka, Suita,
+Osaka 565-0871, Japan}
 
 \begin{abstract}
 \end{abstract}
@@ -97,6 +107,23 @@ bars present the statistical uncertainty at 95\% confidence level.}
   \label{tab:tmp2}
 \end{table}
 
+
+\begin{figure}[tbp]
+\centering
+\includegraphics[]{fig/result.nvt.tiny/fig-gkr.eps}
+\caption{
+  The Kirkwood G-factor calculated for system $S_{1}$.
+  ZM method of orders $l=1,2,3$ and 4 with the cut-off 1.2~nm and
+splitting parameter $\protect\alpha =0.0\,\text{nm}^{-1}$ are plotted. The
+RF method is shown as an comparison, which uses a cut-off radius of 1.2~nm
+and dielectric constant of 80. The statistical uncertainty of the SPME
+method is presented at 95~\% confidence level with the red error bars. the
+statistical uncertainty of the SPME method is denoted by the red error bars.
+The statistical uncertainties of the other methods are essentially of the
+same size as the SPME, so they are not presented in the figure for clarity.
+}
+\label{fig:gkr-conv-alpha}
+\end{figure}
 
 \begin{figure}[tbp]
 \centering
