--- a/writedown/zm/paper.water/ref.bib
+++ b/writedown/zm/paper.water/ref.bib
@@ -277,3 +277,64 @@ application to liquid systems},
   File                     = {tironi1995generalized.pdf:tironi1995generalized.pdf:PDF},
   Timestamp                = {2012.09.20}
 }
+@Article{fukuda2011molecular,
+  Title                    = {Molecular dynamics scheme for precise estimation of electrostatic interaction via zero-dipole summation principle},
+  Author                   = {Fukuda, I. and Yonezawa, Y. and Nakamura, H.},
+  Journal                  = {The Journal of chemical physics},
+  Year                     = {2011},
+  Pages                    = {164107},
+  Volume                   = {134},
+
+  File                     = {fukuda2011molecular.pdf:fukuda2011molecular.pdf:PDF},
+  Timestamp                = {2013.12.04}
+}
+@Article{fukuda2013zero,
+  Title                    = {Zero-multipole summation method for efficiently estimating electrostatic interactions in molecular system},
+  Author                   = {Fukuda, I.},
+  Journal                  = {The Journal of Chemical Physics},
+  Year                     = {2013},
+  Pages                    = {174107},
+  Volume                   = {139},
+
+  File                     = {fukuda2013zero.pdf:fukuda2013zero.pdf:PDF},
+  Timestamp                = {2013.11.07}
+}
+
+@Article{baumketner2009removing,
+  Title                    = {Removing systematic errors in interionic potentials of mean force computed in molecular simulations using reaction-field-based electrostatics},
+  Author                   = {Baumketner, Andrij},
+  Journal                  = {The Journal of chemical physics},
+  Year                     = {2009},
+  Number                   = {10},
+  Pages                    = {104106},
+  Volume                   = {130},
+
+  File                     = {baumketner2009removing.pdf:/home/wanghan/study/pdfPool/baumketner2009removing.pdf:PDF},
+  Publisher                = {AIP Publishing},
+  Timestamp                = {2014.11.12}
+}
+@article{fukuda2012non,
+  title={Non-Ewald methods: theory and applications to molecular systems},
+  author={Fukuda, Ikuo and Nakamura, Haruki},
+  journal={Biophysical reviews},
+  volume={4},
+  number={3},
+  pages={161--170},
+  year={2012},
+  publisher={Springer}
+}
+
+@Article{hunenberger1998alternative,
+  Title                    = {Alternative schemes for the inclusion of a reaction-field correction into molecular dynamics simulations: Influence on the simulated energetic, structural, and dielectric properties of liquid water},
+  Author                   = {H{\"u}nenberger, Philippe H and van Gunsteren, Wilfred F},
+  Journal                  = {The Journal of chemical physics},
+  Year                     = {1998},
+  Number                   = {15},
+  Pages                    = {6117--6134},
+  Volume                   = {108},
+
+  File                     = {hunenberger1998alternative.pdf:/home/wanghan/study/pdfPool/hunenberger1998alternative.pdf:PDF},
+  Publisher                = {AIP Publishing},
+  Timestamp                = {2014.11.12}
+}
+
